force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/docutizexa__DocutizeStaticsSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>document DX Static Setting</label>
</CustomObject>