force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__d3wbEntpointURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__d3wbEntpointURL__c</fullName>
    <defaultValue>&apos;https://docutize.oproarts.com/d3wb&apos;</defaultValue>
    <label>d3wb Entpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>