force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__D3WorkerApiURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__D3WorkerApiURL__c</fullName>
    <label>D3Worker API URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>