force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__DocumentUploadTimeout__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__DocumentUploadTimeout__c</fullName>
    <defaultValue>120</defaultValue>
    <label>Generated document FileUpload Timeout</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>