force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__DocutizebModeratorURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__DocutizebModeratorURL__c</fullName>
    <defaultValue>&quot;https://docutize.oproarts.com/docutizeb/oauth&quot;</defaultValue>
    <label>Docutizeb Moderator URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>