force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__FaxAddressName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__FaxAddressName__c</fullName>
    <defaultValue>&quot;documentdx_fax_address&quot;</defaultValue>
    <label>Fax Address Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>