force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__FillTaskActivityDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__FillTaskActivityDate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Update ActivityDate of Task</label>
    <type>Checkbox</type>
</CustomField>