force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__IsUseSalesforceFiles__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__IsUseSalesforceFiles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Salesforce Files</label>
    <type>Checkbox</type>
</CustomField>