force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__OPROARTSConnectorType__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OPROARTSConnectorType__c</fullName>
    <defaultValue>&quot;LAD&quot;</defaultValue>
    <label>OPROARTS Connector Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>