force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__OPROARTSDeleteTemplateURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OPROARTSDeleteTemplateURL__c</fullName>
    <defaultValue>&quot;https://designer.oproarts.com/OPROARTSConsole/deleteDocutizeTemplate.do&quot;</defaultValue>
    <label>OPROARTS DeleteTemplate URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>