force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__OPROARTSDesignerURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OPROARTSDesignerURL__c</fullName>
    <defaultValue>&quot;https://designer.oproarts.com/OPROARTSConsole/docutizeAuthentication.do&quot;</defaultValue>
    <label>OPROARTS Designer URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>