force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__OPROARTSDocutizebURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OPROARTSDocutizebURL__c</fullName>
    <defaultValue>&quot;https://docutize.oproarts.com/docutizeb/action&quot;</defaultValue>
    <label>OPROARTS Docutizeb URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>