force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__OPROARTSFileStoreURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OPROARTSFileStoreURL__c</fullName>
    <defaultValue>&quot;https://docutize.oproarts.com/docutizeb/store&quot;</defaultValue>
    <label>OPROARTS FileStore URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>