force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__OPROARTSGetTemplateNameURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OPROARTSGetTemplateNameURL__c</fullName>
    <defaultValue>&quot;https://designer.oproarts.com/OPROARTSConsole/getDocutizeTemplateNameJSON.do&quot;</defaultValue>
    <label>OPROARTS GetTemplateName URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>