force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__OPROARTSOfficeDesignerURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OPROARTSOfficeDesignerURL__c</fullName>
    <defaultValue>&quot;https://designer.oproarts.com/docutized/templateDownload&quot;</defaultValue>
    <label>OPROARTS Office Designer URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>