force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__OPROARTSProvideURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OPROARTSProvideURL__c</fullName>
    <defaultValue>&quot;https://designer.oproarts.com/OPROARTSConsole/checkDocutizeAuthenticationJSON.do&quot;</defaultValue>
    <label>OPROARTS Provide URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>