force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__OPROARTSTemplateExportURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OPROARTSTemplateExportURL__c</fullName>
    <defaultValue>&quot;https://designer.oproarts.com/OPROARTSConsole/docutizeExport.do&quot;</defaultValue>
    <label>OPROARTS Template Export URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>