force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__OPROARTSTemplateImportURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OPROARTSTemplateImportURL__c</fullName>
    <defaultValue>&quot;https://designer.oproarts.com/OPROARTSConsole/docutizeImport.do&quot;</defaultValue>
    <label>OPROARTS Template Import URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>