force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XABucket__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XABucket__c</fullName>
    <label>XA Bucket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>