force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XAConnectionTimeout__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XAConnectionTimeout__c</fullName>
    <defaultValue>60</defaultValue>
    <label>XA API Connection Timeout</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>