force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XAConnectorTypeDesign__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XAConnectorTypeDesign__c</fullName>
    <defaultValue>&quot;XLAD&quot;</defaultValue>
    <label>XA Connector Type (Design)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>