force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XAConnectorTypeOutput__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XAConnectorTypeOutput__c</fullName>
    <defaultValue>&quot;XLA&quot;</defaultValue>
    <label>XA Connector Type (Output)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>