force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XADocutizeBridgeURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XADocutizeBridgeURL__c</fullName>
    <defaultValue>&quot;https://xa.oproarts.com/docutizeb/action&quot;</defaultValue>
    <label>XA Docutize Bridge URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>