force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XADocutizeFileStoreURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XADocutizeFileStoreURL__c</fullName>
    <defaultValue>&quot;https://xa.oproarts.com/docutizeb/store&quot;</defaultValue>
    <label>XA Docutize FileStore URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>