force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XADocutizeValidatorURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XADocutizeValidatorURL__c</fullName>
    <defaultValue>&quot;https://docutize.oproarts.com/docutizeb/validate&quot;</defaultValue>
    <label>XA Docutize Validator URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>