force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XATemplateCopyURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XATemplateCopyURL__c</fullName>
    <defaultValue>&quot;https://xa.oproarts.com/docutize-bridge/clone&quot;</defaultValue>
    <label>XA Template Copy URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>