force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XATemplateDeleteURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XATemplateDeleteURL__c</fullName>
    <defaultValue>&quot;https://xa.oproarts.com/docutize-bridge/delete&quot;</defaultValue>
    <label>XA Template Delete URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>