force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XATemplateExportURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XATemplateExportURL__c</fullName>
    <defaultValue>&quot;https://xa.oproarts.com/docutize-bridge/export&quot;</defaultValue>
    <label>XA Template Export URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>