force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XATemplateImportURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XATemplateImportURL__c</fullName>
    <defaultValue>&quot;https://xa.oproarts.com/docutize-bridge/import&quot;</defaultValue>
    <label>XA Template Import URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>