force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XATemplateInfoURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XATemplateInfoURL__c</fullName>
    <defaultValue>&quot;https://xa.oproarts.com/docutize-bridge/getTemplateInfo&quot;</defaultValue>
    <label>XA Template Info URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>