force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XATemplateOpenURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XATemplateOpenURL__c</fullName>
    <defaultValue>&quot;https://xa.oproarts.com/docutize-bridge/layout&quot;</defaultValue>
    <label>XA Template Open URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>