force-app/main/default/objects/docutizexa__DocutizeStaticsSetting__c/fields/docutizexa__XAThumbnailURL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__XAThumbnailURL__c</fullName>
    <defaultValue>&quot;https://xa.oproarts.com/console/api/v1/thumbnail&quot;</defaultValue>
    <label>XA Template Thumbnail URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>